# dogs_vs_cats_api

./: .gitattributes  Dockerfile  README.md  exploration.ipynb  modeling.ipynb  pyproject.toml
.github/workflows/: tests.yaml
api/: config.py
api/server/: config.py  dependencies.py  main.py  schemas.py
api/utils/: image_classifier.py  interfaces.py
checkpoints/: model_checkpoint.ckpt.index
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
tests/: conftest.py
tests/tests_e2e/: test_api.py  test_image_classifier.py
tests/tests_unit/: test_image_classifier.py
