[tool.poetry]
name = "dogs_vs_cats_api"
version = "0.1.0"
description = ""
authors = ["luikymagno <luikymagno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
Pillow = "^9.0.1"
scipy = "^1.8.0"
tensorflow-hub = "^0.12.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
